@@ -3,11 +3,13 @@ package com.cmclinnovations.agent.service.core;
 import java.io.IOException;
 import java.io.StringWriter;
 import java.util.ArrayDeque;
+import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Map;
 import java.util.List;
+import java.util.Map;
 import java.util.Queue;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 import org.apache.http.client.methods.CloseableHttpResponse;
@@ -27,11 +29,13 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
 
+import com.cmclinnovations.agent.model.ParentField;
 import com.cmclinnovations.agent.model.SparqlBinding;
 import com.cmclinnovations.agent.model.type.LifecycleEventType;
 import com.cmclinnovations.agent.model.type.SparqlEndpointType;
 import com.cmclinnovations.agent.template.FormTemplateFactory;
 import com.cmclinnovations.agent.template.QueryTemplateFactory;
+import com.cmclinnovations.agent.utils.LifecycleResource;
 import com.cmclinnovations.stack.clients.blazegraph.BlazegraphClient;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -60,7 +64,7 @@ public class KGService {
   public static final String INVALID_SHACL_ERROR_MSG = "Invalid knowledge model! SHACL restrictions have not been defined/instantiated in the knowledge graph.";
 
   private static final String RDF_LIST_PATH_PREFIX = "/rdf:rest";
-  private static final String SUB_SHAPE_PATH = "/sh:node/sh:property";
+  private static final String SUB_SHAPE_PATH = "sh:node/sh:property";
 
   private static final Logger LOGGER = LogManager.getLogger(KGService.class);
 
@@ -69,11 +73,11 @@ public class KGService {
    * 
    * @param fileService File service for accessing file resources.
    */
-  public KGService(FileService fileService) {
+  public KGService(FileService fileService, JsonLdService jsonLdService) {
     this.client = RestClient.create();
     this.objectMapper = new ObjectMapper();
     this.formTemplateFactory = new FormTemplateFactory();
-    this.queryTemplateFactory = new QueryTemplateFactory(this.objectMapper);
+    this.queryTemplateFactory = new QueryTemplateFactory(jsonLdService);
     this.fileService = fileService;
   }
 
@@ -125,7 +129,8 @@ public class KGService {
    * @return the query results.
    */
   public Queue<SparqlBinding> query(String query) {
-    return this.query(query, BlazegraphClient.getInstance().getRemoteStoreClient(DEFAULT_NAMESPACE).getQueryEndpoint());
+    return this.query(query,
+        BlazegraphClient.getInstance().getRemoteStoreClient(DEFAULT_NAMESPACE).getQueryEndpoint());
   }
 
   /**
@@ -170,13 +175,7 @@ public class KGService {
    * @return the query results.
    */
   public Queue<SparqlBinding> query(String query, SparqlEndpointType endpointType) {
-    List<String> endpoints;
-    if (endpointType.equals(SparqlEndpointType.MIXED)) {
-      endpoints = this.getEndpoints(SparqlEndpointType.BLAZEGRAPH);
-      endpoints.addAll(this.getEndpoints(SparqlEndpointType.ONTOP));
-    } else {
-      endpoints = this.getEndpoints(endpointType);
-    }
+    List<String> endpoints = this.getEndpoints(endpointType);
     try {
       StringWriter stringWriter = new StringWriter();
       FedXRepository repository = FedXFactory.createSparqlFederation(endpoints);
@@ -186,7 +185,8 @@ public class KGService {
         tq.setMaxExecutionTime(600);
         SPARQLResultsJSONWriter jsonWriter = new SPARQLResultsJSONWriter(stringWriter);
         tq.evaluate(jsonWriter);
-        JsonNode bindings = this.objectMapper.readValue(stringWriter.toString(), ObjectNode.class).path("results")
+        JsonNode bindings = this.objectMapper.readValue(stringWriter.toString(), ObjectNode.class)
+            .path("results")
             .path("bindings");
         if (bindings.isArray()) {
           return this.parseResults((ArrayNode) bindings);
@@ -214,13 +214,7 @@ public class KGService {
    * @return the query results as CSV rows.
    */
   public String[] queryCSV(String query, SparqlEndpointType endpointType) {
-    List<String> endpoints;
-    if (endpointType.equals(SparqlEndpointType.MIXED)) {
-      endpoints = this.getEndpoints(SparqlEndpointType.BLAZEGRAPH);
-      endpoints.addAll(this.getEndpoints(SparqlEndpointType.ONTOP));
-    } else {
-      endpoints = this.getEndpoints(endpointType);
-    }
+    List<String> endpoints = this.getEndpoints(endpointType);
     try {
       StringWriter stringWriter = new StringWriter();
       FedXRepository repository = FedXFactory.createSparqlFederation(endpoints);
@@ -295,17 +289,38 @@ public class KGService {
   }
 
   /**
-   * Queries for either all instances or a specific instance based on the id.
+   * Queries for all instance(s) associated with the target id.
    * 
    * @param shaclPathQuery The query to retrieve the required predicate paths in
    *                       the SHACL restrictions.
-   * @param targetId       An optional field to target the query at a specific
-   *                       instance.
-   * @param hasParent      Indicates if the query needs to filter out parent
-   *                       entities.
+   * @param targetId       Target ID of interest.
    */
-  public Queue<SparqlBinding> queryInstances(String shaclPathQuery, String targetId, boolean hasParent) {
-    return this.queryInstances(shaclPathQuery, targetId, hasParent, null);
+  public Queue<SparqlBinding> queryInstances(String shaclPathQuery, String targetId) {
+    return this.queryInstances(shaclPathQuery, targetId, null, null);
+  }
+
+  /**
+   * Queries for all instances that may or may not be associated with a parent
+   * field.
+   * 
+   * @param shaclPathQuery The query to retrieve the required predicate paths in
+   *                       the SHACL restrictions.
+   * @param parentField    Optional parent field.
+   */
+  public Queue<SparqlBinding> queryInstances(String shaclPathQuery, ParentField parentField) {
+    return this.queryInstances(shaclPathQuery, "", parentField, null);
+  }
+
+  /**
+   * Queries for all instances associated with a lifecycle event.
+   * 
+   * @param shaclPathQuery The query to retrieve the required predicate paths in
+   *                       the SHACL restrictions.
+   * @param lifecycleEvent Optional parameter to dictate the filter for a relevant
+   *                       lifecycle event.
+   */
+  public Queue<SparqlBinding> queryInstances(String shaclPathQuery, LifecycleEventType lifecycleEvent) {
+    return this.queryInstances(shaclPathQuery, "", null, lifecycleEvent);
   }
 
   /**
@@ -315,26 +330,25 @@ public class KGService {
    *                       the SHACL restrictions.
    * @param targetId       An optional field to target the query at a specific
    *                       instance.
-   * @param hasParent      Indicates if the query needs to filter out parent
-   *                       entities.
+   * @param parentField    Optional parent field.
    * @param lifecycleEvent Optional parameter to dictate the filter for a relevant
    *                       lifecycle event.
    */
-  public Queue<SparqlBinding> queryInstances(String shaclPathQuery, String targetId, boolean hasParent,
+  public Queue<SparqlBinding> queryInstances(String shaclPathQuery, String targetId, ParentField parentField,
       LifecycleEventType lifecycleEvent) {
     // Initialise a new queue to store all variables
     // And add the first level right away
     Queue<Queue<SparqlBinding>> nestedVariablesAndPropertyPaths = this.queryNestedPredicates(shaclPathQuery);
     LOGGER.debug("Generating the query template from the predicate paths and variables queried...");
     Queue<String> queries = this.queryTemplateFactory.genGetTemplate(nestedVariablesAndPropertyPaths, targetId,
-        hasParent, lifecycleEvent);
+        parentField, lifecycleEvent);
     LOGGER.debug("Querying the knowledge graph for the instances...");
     List<String> varSequence = this.queryTemplateFactory.getSequence();
     // Query for direct instances
     Queue<SparqlBinding> instances = this.query(queries.poll(), SparqlEndpointType.MIXED);
     // Query for secondary instances ie instances that are subclasses of parent
     Queue<SparqlBinding> secondaryInstances = this.query(queries.poll(), SparqlEndpointType.BLAZEGRAPH);
-    instances.addAll(secondaryInstances);
+    instances = this.combineBindingQueue(instances, secondaryInstances);
     // If there is a variable sequence available, add the sequence to each binding,
     if (!varSequence.isEmpty()) {
       instances.forEach(instance -> instance.addSequence(varSequence));
@@ -356,7 +370,7 @@ public class KGService {
       throw new IllegalStateException(INVALID_SHACL_ERROR_MSG);
     }
     LOGGER.debug("Generating the query template from the predicate paths and variables queried...");
-    Queue<String> queries = this.queryTemplateFactory.genGetTemplate(nestedVariablesAndPropertyPaths, null, false,
+    Queue<String> queries = this.queryTemplateFactory.genGetTemplate(nestedVariablesAndPropertyPaths, null, null,
         null);
     LOGGER.debug("Querying the knowledge graph for the instances in csv format...");
     // Query for direct instances
@@ -392,7 +406,8 @@ public class KGService {
       throw new IllegalStateException(INVALID_SHACL_ERROR_MSG);
     }
     LOGGER.debug("Generating the query template from the predicate paths and variables queried...");
-    Queue<String> searchQuery = this.queryTemplateFactory.genSearchTemplate(nestedVariablesAndPropertyPaths, criterias);
+    Queue<String> searchQuery = this.queryTemplateFactory.genSearchTemplate(nestedVariablesAndPropertyPaths,
+        criterias);
     LOGGER.debug("Querying the knowledge graph for the matching instances...");
     // Query for direct instances
     Queue<SparqlBinding> instances = this.query(searchQuery.poll(), SparqlEndpointType.MIXED);
@@ -410,15 +425,34 @@ public class KGService {
    * @param field   Field name
    */
   public SparqlBinding getSingleInstance(Queue<SparqlBinding> results) {
+    if (results.size() > 1) {
+      // When there is more than one results, verify if they can be grouped
+      // as results might contain an array of different values for the same instance
+      String firstId = results.peek().getFieldValue(LifecycleResource.IRI_KEY);
+      boolean isGroup = results.stream().allMatch(binding -> {
+        String currentId = binding.getFieldValue(LifecycleResource.IRI_KEY);
+        return currentId != null && currentId.equals(firstId);
+      });
+      if (!isGroup) {
+        LOGGER.error("Detected multiple instances: Data model is invalid!");
+        throw new IllegalStateException("Detected multiple instances: Data model is invalid!");
+      }
+      // Removes the first instance from results as the core instance
+      SparqlBinding firstInstance = results.poll();
+      // Iterate over each result binding to append arrays if required
+      results.stream().forEach(firstInstance::addFieldArray);
+      return firstInstance;
+    }
     if (results.size() == 1) {
       return results.poll();
-    } else if (results.isEmpty()) {
+    }
+    if (results.isEmpty()) {
       LOGGER.error("No valid instance found!");
       throw new NullPointerException("No valid instance found!");
-    } else {
-      LOGGER.error("Detected multiple instances: Data model is invalid!");
-      throw new IllegalStateException("Detected multiple instances: Data model is invalid!");
     }
+    LOGGER.error("Data model is invalid!");
+    throw new IllegalStateException("Data model is invalid!");
+
   }
 
   /**
@@ -427,20 +461,16 @@ public class KGService {
    * 
    * @param endpointType The required endpoint type. Can be either mixed,
    *                     blazegraph, or ontop.
+   * @return List of endpoints of type `endpointType`
    */
   public List<String> getEndpoints(SparqlEndpointType endpointType) {
     LOGGER.debug("Retrieving available endpoints...");
-    String serviceClass = "";
-    if (endpointType.equals(SparqlEndpointType.BLAZEGRAPH)) {
-      serviceClass = "ser:Blazegraph";
-    } else if (endpointType.equals(SparqlEndpointType.ONTOP)) {
-      serviceClass = "ser:Ontop";
-    }
-    String query = this.fileService.getContentsWithReplacement(FileService.ENDPOINT_QUERY_RESOURCE, serviceClass);
+    String query = this.fileService.getContentsWithReplacement(FileService.ENDPOINT_QUERY_RESOURCE,
+        endpointType.getIri());
     Queue<SparqlBinding> results = this.query(query);
     return results.stream()
         .map(binding -> binding.getFieldValue("endpoint"))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -532,13 +562,48 @@ public class KGService {
       }
       // Extend to get the next level of shape if any
       replacementShapePath = replacementShapePath.isEmpty() ? " ?nestedshape." +
-          "?nestedshape sh:name ?nodename;sh:node/sh:property"
-          : SUB_SHAPE_PATH + replacementShapePath;
+          "?nestedshape sh:name ?" + QueryTemplateFactory.NODE_GROUP_VAR + ";sh:node/sh:targetClass ?"
+          + QueryTemplateFactory.NESTED_CLASS_VAR + ";" + SUB_SHAPE_PATH
+          : "/" + SUB_SHAPE_PATH + replacementShapePath;
     }
     if (results.isEmpty()) {
       LOGGER.error(INVALID_SHACL_ERROR_MSG);
       throw new IllegalStateException(INVALID_SHACL_ERROR_MSG);
     }
     return results;
+  }
+
+  /**
+   * Combine two queues containing SparlBinding objects. The method also removes
+   * duplicates in the combined queue.
+   * 
+   * @param firstQueue The first target queue.
+   * @param secQueue   The second target queue.
+   */
+  private Queue<SparqlBinding> combineBindingQueue(Queue<SparqlBinding> firstQueue, Queue<SparqlBinding> secQueue) {
+    if (firstQueue.isEmpty() && secQueue.isEmpty()) {
+      return new ArrayDeque<>();
+    }
+    Queue<SparqlBinding> result = new ArrayDeque<>();
+    // Group them by the IRI key
+    Map<String, List<SparqlBinding>> groupedBindings = Stream.concat(firstQueue.stream(), secQueue.stream())
+        .distinct()
+        .collect(Collectors.groupingBy(binding -> binding.containsField(LifecycleResource.IRI_KEY)
+            ? binding.getFieldValue(LifecycleResource.IRI_KEY)
+            : binding.getFieldValue("id")));
+    // For the same IRI, combine them using the add field array method
+    groupedBindings.values().forEach(groupedBinding -> {
+      if (groupedBinding.isEmpty()) {
+        return;
+      }
+      SparqlBinding firstBinding = groupedBinding.get(0);
+      if (groupedBinding.size() > 1) {
+        for (int i = 1; i < groupedBinding.size(); i++) {
+          firstBinding.addFieldArray(groupedBinding.get(i));
+        }
+      }
+      result.offer(firstBinding);
+    });
+    return result;
   }
 }
